--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -37,5 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.hzw1199:AndroidGpsStatus:1.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
-
+    implementation files('libs/apache-ftpserver-1.1.1.jar')
 }
